--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
 
 body{
     height: 100vh;
-    background: linear-gradient(120deg, #ffe53bd8, #ff2525da);
+    background: linear-gradient(120deg, #001f3f, #004080);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,9 +18,30 @@ body{
     justify-content: space-around;
     height: 200px;
     width: 550px;
-    background-color: transparent;
+    background:  rgb(5, 5, 5, .9)transparent;
     border-radius: 3px;
     box-shadow: 0px 8px 10px rgb(0, 0, 0);
 }
 
+.relogio div{
+    height: 170px;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 60px;
+    color: #fff;
+    background:  rgb(5, 5, 5, .9);
+    box-shadow: 5px 5px 15px rgba( 0, 0, 0, .7);
+    border-radius: 7px;
+    letter-spacing: 3px;
 
+}
+.relogio span{
+    font-weight: bolder;
+    font-size: 60px;
+}
+.relogio span.tempo{
+    font-size: 10px;
+}
